# multi-camera-lidar-bev-perception

./: .gitignore  README.md  pyproject.toml
configs/: camera_only.yaml  demo.yaml  fb_ssem_sample.yaml
docs/: CODE_MAP.md
scripts/: check_bevfusion_inputs.py  evaluate_bevfusion.py  evaluate_bevfusion_batch.py  evaluate_bevfusion_scene.py  evaluate_tracking_ids.py  prepare_nuscenes_mmdet_infos.py  preview_nuscenes.py  render_bevfusion_predictions.py  render_nuscenes_video.py  render_semantic_drive.py  repair_wsl2_admin.ps1  run_bevfusion_batch.py  run_bevfusion_inference.py  run_bevfusion_scene.py  run_full_mini_after_wsl.ps1  track_bevfusion_scene.py  tune_motion_tracker.py  wsl_bevfusion_smoke.py
src/parking_bev/: __init__.py  app.py  appearance.py  bev.py  camera.py  config.py  evaluation.py  fusion.py  learned_appearance.py  lidar.py  metric_bev.py  nuscenes_source.py  predictions.py  radar_fusion.py  semantic_3d.py  tracking.py  tracking_evaluation.py  voxelize.py  world_model.py
src/parking_bev/bev/: __init__.py  fusion.py  projection.py
src/parking_bev/perception/: __init__.py  evaluation.py  predictions.py
src/parking_bev/runtime/: __init__.py  app.py
src/parking_bev/sensors/: __init__.py  radar_fusion.py
src/parking_bev/tracking/: __init__.py  appearance.py  evaluation.py  learned_appearance.py  tracker.py
src/parking_bev/visualization/: __init__.py  metric_bev.py  semantic_3d.py
src/parking_bev/world/: __init__.py  world_model.py
tests/: test_bev.py  test_lidar.py  test_nuscenes_source.py
