[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "parking-bev"
version = "0.1.0"
description = "Multi-camera, LiDAR, and radar BEV perception for autonomous driving"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.9",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
datasets = ["nuscenes-devkit==1.2.0", "scipy>=1.11"]

[project.scripts]
parking-bev = "parking_bev.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
